--- a/register.html
+++ b/register.html
@@ -250,8 +250,8 @@
 
     <!-- Картка з оплатою -->
     <div class="card register-card">
-      <div class="card-payment-title">Оплата благодійного внеску</div>
-      <p>Сума внеску: <b>1500 ₴</b> на картку</p>
+      <div class="card-payment-title">Оплата внеску</div>
+      <p>Сума внеску: <b>3500 ₴</b> на картку</p>
       <p>Номер картки: <span id="cardNum" class="card-number">4874 0700 5068 8793</span></p>
       <button type="button" id="copyCard" class="btn btn--secondary" style="margin-top:6px;">
         Скопіювати картку
