Change header and note in Big Fish section
Updated header and note text for Big Fish section.

--- a/live.html
+++ b/live.html
@@ -203,7 +203,7 @@
       <!-- Права колонка: Big Fish Total -->
       <div class="live-right">
         <div class="card">
-          <h2 style="margin-top:0;margin-bottom:10px;">Big Fish — підсумок</h2>
+          <h2 style="margin-top:0;margin-bottom:10px;">Big Fish — Total</h2>
           <div class="table-wrap" style="overflow-x:auto;">
             <table class="table table-sm" id="bigFishTable">
               <thead>
@@ -220,7 +220,7 @@
             </table>
           </div>
           <p class="live-note">
-            Рядок, виділений фоном — поточний абсолютний Big Fish етапу.
+            Big Fish етапу.
           </p>
         </div>
       </div>
