Update payment title in register.html

--- a/register.html
+++ b/register.html
@@ -323,7 +323,7 @@
     <!-- Картка з оплатою (нижче форми) -->
     <div class="card register-card">
       <div class="card-payment-title" style="font-weight:600;margin-bottom:4px;">
-        Оплата благодійного внеску
+        Оплата внеску
       </div>
       <p>Сума внеску: <b>3500 ₴</b> на картку</p>
       <p>Номер картки: <span id="cardNum" class="card-number" style="font-weight:600;letter-spacing:0.12em;">4874 0700 5068 8793</span></p>
