Update API URL in registration script

--- a/register.html
+++ b/register.html
@@ -391,8 +391,7 @@
 <!-- СКРИПТ РЕЄСТРАЦІЇ -->
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  const apiUrl = 'https://script.google.com/macros/s/AKfycbwNsDc5Vszj6sql61tkGmWHQHh44PVFeiA2thYUvV6u4l3_WWtFqPBAYobEue605_6m/exec';
-
+  const API_URL = "https://script.google.com/macros/s/AKfycbzBnlHIIG_VzI6DOzSOLYGOeHET8qi8jc-EK1ar1NAVa8zVKiT2U1IZ80GIf1d2NL0S/exec";
   const form = document.getElementById('regForm');
   const qty = document.getElementById('food_qty');
   const qtyField = document.getElementById('foodQtyField');
