--- a/register.html
+++ b/register.html
@@ -391,7 +391,7 @@
 <!-- СКРИПТ РЕЄСТРАЦІЇ -->
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  const API_URL = "https://script.google.com/macros/s/AKfycbzBnlHIIG_VzI6DOzSOLYGOeHET8qi8jc-EK1ar1NAVa8zVKiT2U1IZ80GIf1d2NL0S/exec";
+  const API = "https://script.google.com/macros/s/AKfycbzavsHNwfQQ_5P3ciP19G7vOJjRdo3jr1GgHEi1oSDXNY5QT0ek4wwXubygTtEQoqFM/exec";
   const form = document.getElementById('regForm');
   const qty = document.getElementById('food_qty');
   const qtyField = document.getElementById('foodQtyField');
