--- a/register.html
+++ b/register.html
@@ -1,397 +1,8 @@
-<!doctype html>
-<html lang="uk">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Реєстрація — STOLAR CARP</title>
-
-  <!-- Favicon & App Icon -->
-  <link rel="icon" type="image/png" href="assets/favicon.png">
-  <link rel="apple-touch-icon" href="assets/favicon.png">
-  <meta name="theme-color" content="#1a1a1a">
-
-  <!-- Стилі та скрипт меню -->
-  <link rel="stylesheet" href="assets/css/main.css">
-  <script defer src="assets/js/config.js"></script>
-
-  <!-- Локальні стилі тільки для цієї сторінки -->
-  <style>
-    .register-intro {
-      margin-bottom: 20px;
-      text-align: center;
-      position: relative;
-    }
-
-    .register-card {
-      margin-top: 18px;
-      margin-bottom: 16px;
-    }
-
-    .register-form-card {
-      margin-top: 10px;
-    }
-
-    .event-options {
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
-      padding-top: 4px;
-    }
-
-    .event-item {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      padding: 6px 9px;
-      border-radius: 10px;
-      background: #0d0d14;
-      border: 1px solid #262636;
-      cursor: pointer;
-      font-size: 0.95rem;
-    }
-
-    .event-item:hover {
-      border-color: rgba(250, 204, 21, 0.8);
-    }
-
-    /* зелена більша крапка вибору етапу */
-    .event-item input[type="radio"] {
-      width: 20px;
-      height: 20px;
-      accent-color: #22c55e; /* зелений */
-      transform: scale(1.15);
-    }
-
-    .radio-row {
-      display: flex;
-      gap: 16px;
-      flex-wrap: wrap;
-    }
-
-    .radio-row label {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      cursor: pointer;
-    }
-
-    #foodQtyField.field--disabled {
-      opacity: 0.55;
-    }
-
-    /* Стиль заголовка */
-    .page-title span {
-      display: block;
-    }
-
-    .page-title span:nth-child(1),
-    .page-title span:nth-child(2) {
-      font-size: clamp(26px,4vw,32px);
-      text-transform: uppercase;
-      letter-spacing: .08em;
-    }
-
-    .page-title span:nth-child(3) {
-      font-size: clamp(30px,4.6vw,40px);
-      font-weight: 900;
-    }
-
-    /* Градієнт + glow + легке "дихання" */
-    .register-page .page-title.title-gradient {
-      animation: scGlowPulse 3.6s ease-in-out infinite;
-      text-shadow:
-        0 0 10px rgba(246,195,76,0.55),
-        0 0 22px rgba(122,15,43,0.55),
-        0 0 40px rgba(0,0,0,0.8);
-      margin-bottom: 4px;
-    }
-
-    @keyframes scGlowPulse {
-      0% {
-        text-shadow:
-          0 0 6px rgba(246,195,76,0.35),
-          0 0 16px rgba(122,15,43,0.35),
-          0 0 30px rgba(0,0,0,0.6);
-        transform: translateY(0);
-      }
-      50% {
-        text-shadow:
-          0 0 14px rgba(246,195,76,0.85),
-          0 0 30px rgba(122,15,43,0.85),
-          0 0 46px rgba(0,0,0,0.9);
-        transform: translateY(-1px);
-      }
-      100% {
-        text-shadow:
-          0 0 6px rgba(246,195,76,0.35),
-          0 0 16px rgba(122,15,43,0.35),
-          0 0 30px rgba(0,0,0,0.6);
-        transform: translateY(0);
-      }
-    }
-
-    /* Тонка лінія під заголовком */
-    .register-intro::after {
-      content: "";
-      display: block;
-      margin: 14px auto 0;
-      width: 120px;
-      height: 2px;
-      border-radius: 999px;
-      background: linear-gradient(90deg,#f6c34c 0%,#cc6a2b 50%,#7a0f2b 100%);
-      box-shadow: 0 0 12px rgba(246,195,76,0.6);
-      opacity: .9;
-    }
-
-    @media (max-width: 520px) {
-      .register-intro::after {
-        width: 90px;
-      }
-    }
-
-    /* Темні, преміальні інпути на цій сторінці */
-    .register-page .input,
-    .register-page input[type="text"],
-    .register-page input[type="tel"],
-    .register-page input[type="number"] {
-      background: #0f0f14 !important;
-      border: 1px solid #2a2a39 !important;
-      color: #fff !important;
-      padding: 10px 14px !important;
-      border-radius: 10px !important;
-      font-size: 1rem;
-    }
-
-    .register-page .input::placeholder,
-    .register-page input::placeholder {
-      color: #6b7280;
-    }
-
-    .register-page .input:focus,
-    .register-page input:focus {
-      outline: none;
-      border-color: #f6c34c !important;
-      box-shadow: 0 0 6px rgba(246,195,76,0.5);
-    }
-  </style>
-</head>
-<body class="register-page">
-
-<!-- HEADER -->
-<header class="header">
-  <div class="container header__row">
-    <a class="logo" href="index.html">
-      <span class="logo__mark">SC</span>
-      <span class="logo__text">STOLAR CARP</span>
-    </a>
-    <nav class="nav" id="nav">
-      <a href="index.html" class="nav__link">Головна</a>
-      <a href="rules.html" class="nav__link">Регламент</a>
-      <a href="register.html" class="nav__link nav__link--active">Реєстрація</a>
-      <a href="live.html" class="nav__link">Live</a>
-      <a href="rating.html" class="nav__link">Рейтинг</a>
-      <a href="lakes.html" class="nav__link">Водойми</a>
-      <a href="sponsors.html" class="nav__link">Спонсори</a>
-      <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>
-    </nav>
-    <button class="burger" id="burger"><span></span><span></span><span></span></button>
-  </div>
-</header>
-
-<!-- MAIN -->
-<main class="main">
-  <section class="container section section--narrow">
-    <div class="register-intro">
-      <h1 class="page-title title-gradient">
-        <span>Реєстрація</span>
-        <span>Турнір</span>
-        <span>STOLAR CARP 2026</span>
-      </h1>
-      <p class="lead">
-        Подайте заявку на участь у турнірі STOLAR CARP 2026. Після відправки заявки здійсніть оплату
-        та вкажіть <b>назву команди</b> у коментарі до платежу.
-      </p>
-    </div>
-
-    <!-- Повідомлення форми -->
-    <div id="msg" class="form-msg"></div>
-
-    <!-- Форма -->
-    <div class="form-card register-form-card">
-      <h2>Форма реєстрації</h2>
-      <p class="form__hint">Поля з позначкою <span style="color:var(--accent);">*</span> є обовʼязковими.</p>
-
-      <form id="regForm" class="form" novalidate>
-        <!-- honeypot (антибот) -->
-        <input
-          type="text"
-          name="hp"
-          id="hp"
-          autocomplete="off"
-          style="position:absolute;left:-9999px;top:-9999px;height:0;width:0;opacity:0;"
-        />
-
-        <!-- fingerprint -->
-        <input type="hidden" id="fp" name="fp" />
-
-        <!-- Етап -->
-        <div class="field">
-          <label>
-            Оберіть етап турніру <span style="color:var(--accent);">*</span>
-          </label>
-          <div id="eventOptions" class="event-options">
-            <p id="loading-events" class="form__hint">Завантаження актуальних етапів...</p>
-          </div>
-        </div>
-
-        <!-- Назва команди -->
-        <div class="field">
-          <label for="team_name">
-            Назва команди <span style="color:var(--accent);">*</span>
-          </label>
-          <input
-            type="text"
-            id="team_name"
-            name="team_name"
-            class="input"
-            required
-            minlength="2"
-            maxlength="100"
-            placeholder="Введіть назву команди"
-          />
-        </div>
-
-        <!-- Капітан -->
-        <div class="field">
-          <label for="captain">
-            Капітан команди <span style="color:var(--accent);">*</span>
-          </label>
-          <input
-            type="text"
-            id="captain"
-            name="captain"
-            class="input"
-            required
-            minlength="2"
-            maxlength="100"
-            placeholder="Ім'я та прізвище капітана"
-          />
-        </div>
-
-        <!-- Телефон -->
-        <div class="field">
-          <label for="phone_rest">
-            Номер телефону (формат: +380XXXXXXXXX) <span style="color:var(--accent);">*</span>
-          </label>
-          <div class="phone-wrap">
-            <span class="phone-prefix">+380</span>
-            <input
-              type="tel"
-              id="phone_rest"
-              inputmode="numeric"
-              placeholder="XXXXXXXXX"
-              required
-            />
-          </div>
-          <input type="hidden" id="phone" name="phone" />
-          <div class="hint" style="font-size:12px;color:var(--muted);">
-            Вказуйте номер капітана для звʼязку по турніру.
-          </div>
-        </div>
-
-        <!-- Харчування -->
-        <div class="field">
-          <label>
-            Харчування від організаторів? <span style="color:var(--accent);">*</span>
-          </label>
-          <div class="radio-row">
-            <label>
-              <input type="radio" name="food" value="Так" required />
-              <span>Так</span>
-            </label>
-            <label>
-              <input type="radio" name="food" value="Ні" />
-              <span>Ні</span>
-            </label>
-          </div>
-        </div>
-
-        <!-- Кількість харчуючих -->
-        <div class="field field--disabled" id="foodQtyField">
-          <label for="food_qty">Кількість харчуючих (1–6)</label>
-          <input
-            type="number"
-            id="food_qty"
-            name="food_qty"
-            class="input"
-            min="1"
-            max="6"
-            inputmode="numeric"
-            placeholder="Вкажіть кількість, якщо замовляєте харчування"
-          />
-          <div class="hint" style="font-size:12px;color:var(--muted);">
-            Якщо харчування не потрібне — залиште поле порожнім.
-          </div>
-        </div>
-
-        <!-- Підтвердження регламенту -->
-        <div class="field">
-          <label style="display:flex;align-items:center;gap:8px;cursor:pointer;">
-            <input type="checkbox" id="rules" required style="transform:scale(1.3);accent-color:#f6c34c;">
-            <span>Підтверджую, що ознайомлений із
-              <a href="rules.html" target="_blank" style="color:#f6c34c;text-decoration:underline;">
-                регламентом турніру
-              </a>
-            </span>
-          </label>
-        </div>
-
-        <!-- Дія -->
-        <div class="form-actions">
-          <button type="submit" id="submitBtn" class="btn btn--primary">
-            Подати заявку
-          </button>
-          <div id="spinner" class="spinner" aria-hidden="true"></div>
-        </div>
-
-        <p class="form__hint" style="margin-top:6px;">
-          ⚠️ Після відправки заявки у вас є <b>24 години</b>, щоб здійснити оплату.
-          Якщо оплата не буде зарахована — заявка буде автоматично анульована.
-        </p>
-      </form>
-    </div>
-
-    <!-- Картка з оплатою (нижче форми) -->
-    <div class="card register-card">
-      <div class="card-payment-title" style="font-weight:600;margin-bottom:4px;">
-        Оплата внеску
-      </div>
-      <p>Сума внеску: <b>3500 ₴</b> на картку</p>
-      <p>Номер картки: <span id="cardNum" class="card-number" style="font-weight:600;letter-spacing:0.12em;">4874 0700 5068 8793</span></p>
-      <button type="button" id="copyCard" class="btn btn--ghost" style="margin-top:6px;">
-        Скопіювати картку
-      </button>
-      <p class="form__hint">У коментарі до платежу обовʼязково вкажіть <b>назву команди</b>.</p>
-    </div>
-
-  </section>
-</main>
-
-<!-- FOOTER -->
-<footer class="footer">
-  <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львів</div>
-    <div class="footer__links">
-      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
-    </div>
-  </div>
-</footer>
-
 <!-- СКРИПТ РЕЄСТРАЦІЇ -->
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  const API = "https://script.google.com/macros/s/AKfycbzavsHNwfQQ_5P3ciP19G7vOJjRdo3jr1GgHEi1oSDXNY5QT0ek4wwXubygTtEQoqFM/exec";
+  const API_URL = "https://script.google.com/macros/s/AKfycbzavsHNwfQQ_5P3ciP19G7vOJjRdo3jr1GgHEi1oSDXNY5QT0ek4wwXubygTtEQoqFM/exec";
+
   const form = document.getElementById('regForm');
   const qty = document.getElementById('food_qty');
   const qtyField = document.getElementById('foodQtyField');
@@ -605,6 +216,3 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 });
 </script>
-
-</body>
-</html>
